--- a/src/css/component.section.css
+++ b/src/css/component.section.css
@@ -1,38 +1,32 @@
 .section {
-  @apply border-t-2 pt-4;
+  @apply pt-4;
 }
 
 .section__title {
-  @apply -mt-2 mb-8 text-xl text-gray-600;
+  @apply -mt-2 text-xl text-gray-600;
+  @apply mb-10;
+  @apply grid gap-2 items-center;
+
+  grid-template-columns: 1fr auto 1fr;
 }
 
-.section--keylined {
-  @apply border-0;
+.section__title::before,
+.section__title::after {
+  @apply bg-gray-400;
+  @apply border-t-2;
 
-  & .section__title {
-    @apply mb-10;
-    @apply grid gap-2 items-center;
+  content: "";
+  margin-top: 0.16665em;
+}
 
-    grid-template-columns: 1fr auto 1fr;
-  }
-  & .section__title::before,
-  & .section__title::after {
-    @apply bg-gray-400;
-    @apply border-t-2;
+.section__title > * {
+  grid-column: 2;
+}
 
-    content: "";
-    margin-top: 0.16665em;
-  }
+.section__title::before {
+  grid-column: 1;
+}
 
-  & .section__title > * {
-    grid-column: 2;
-  }
-
-  & .section__title::before {
-    grid-column: 1;
-  }
-
-  & .section__title::after {
-    grid-column: -2;
-  }
+.section__title::after {
+  grid-column: -2;
 }
